Fix quantity for new items in cart

--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -98,3 +98,10 @@ th {
   color: green;
   cursor: pointer;
 }
+
+.delete-item {
+  font-size: 18px;
+  text-decoration: none;
+  color: gray;
+  cursor: pointer;
+}
